@@ -17,6 +17,11 @@ Screenshots below demonstrate some of the analysis and data visualization capabi
 ## Video demonstrations
 Here's a 5 minutes [screencast](https://youtu.be/k49bgTfAgVU) demonstrating some of the analysis and data visualization capabilities of Equinox. 3D data visualizations are demonstrated in this short [video](https://youtu.be/RM_ofreMsaQ).
 
+## Multi-threading in Equinox
+Equinox is a highly multi-threaded application. All features of the application are performed by background tasks running in thread pools. In addition to multi-threading, it also supports peer-to-peer task sharing among Equinox clients.
+
+![parallel](https://user-images.githubusercontent.com/13915745/40908265-85e1694c-67e6-11e8-9281-d936482992c9.gif)
+
 ## Frameworks used for development
 The software is developed using the following major frameworks and libraries:
 - Git for version control,
@@ -32,7 +37,11 @@ The software is developed using the following major frameworks and libraries:
 - JSch (Java Secure Channel) for SMTP file server connection,
 - iText for automatic PDF report generation
 
-## Multi-threading in Equinox
-Equinox is a highly multi-threaded application. All features of the application are performed by background tasks running in thread pools. In addition to multi-threading, it also supports peer-to-peer task sharing among Equinox clients.
+## How to run the project in Eclipse IDE
+You would need to specify the following program and VM arguments in order to run the application in the development environment.
 
-![parallel](https://user-images.githubusercontent.com/13915745/40908265-85e1694c-67e6-11e8-9281-d936482992c9.gif)
+### Program arguments
+--maxParallelTasks=4 --maxParallelSubtasks=2 --databasePageSize=8192 --databasePageCacheSize=4000 --maxVisibleSTFsPerSpectrum=20 --colorTheme=steelblue
+
+### VM arguments
+-Xms512m -Xmx2048m -XX:+UseStringDeduplication -Xverify:none -server -XX:+UseParallelGC
